@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.6 2004/10/15 02:37:56 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.7 2004/10/19 04:06:35 zhen Exp $
 
 # Simple desriptions of catalyst settings. Please refer to the online
 # documentation for more information.
@@ -11,8 +11,8 @@ distdir="/usr/portage/distfiles"
 
 # options set different build-time options for catalyst. Some examples are:
 # ccache = enables build time ccache support (highly recommended)
-# pkgcache = keeps a tbz2 of every built package (useful if your build stops prematurely)
 # distcc = enable distcc support for building. You have to set distcc_hosts in your spec file.
+# pkgcache = keeps a tbz2 of every built package (useful if your build stops prematurely)
 options="ccache pkgcache"
 
 # sharedir specifies where all of the catalyst runtime executables are. Most users do
