@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.99 2004/10/19 03:39:36 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.100 2004/10/19 04:06:35 zhen Exp $
+
+  19 Oct 2004; John Davis <zhen@gentoo.org> catalyst, files/catalyst.conf,
+  livecd/runscript-support/kmerge.sh:
+  made kernel caching dependent on the "pkgcache" option so that genkernel's
+  postconf can actually work
 
   18 Oct 2004; John Davis <zhen@gentoo.org>
   livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
